# Card-Collection-Manager

./: .gitignore  README.md  TODO List.md  claudecode.md  index.html  package-lock.json  package.json  vite.config.ts
prompt/: generate-skill.md
skills/: Meta-Skill.md  react-frontend.md
src/: index.css
src-tauri/: Cargo.toml  cards.db  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/Card/: Card.module.css  Card.tsx
src/components/CardGrid/: CardGrid.module.css  CardGrid.tsx
src/components/ConfirmModal/: ConfirmModal.module.css  ConfirmModal.tsx
src/components/SearchBar/: SearchBar.module.css  SearchBar.tsx
src/components/Toolbar/: Toolbar.module.css  Toolbar.tsx
src/components/ViewSwitcher/: ViewSwitcher.module.css  ViewSwitcher.tsx
src/pages/: HomePage.module.css  HomePage.tsx
src/services/: api.ts
src/store/: cardStore.ts
src/types/: card.ts
