[package]
name = "card-collection-manager"
version = "1.0.0"
description = "A card collection manager built with Tauri"
authors = ["you"]
edition = "2021"

[lib]
name = "card_collection_manager_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
